aggiunto nuovo filtro per numero scenari (modifica API, Query, ecc)

--- a/backend/src/main/resources/interfaces/storj.yml
+++ b/backend/src/main/resources/interfaces/storj.yml
@@ -215,6 +215,12 @@ paths:
           schema:
             type: string
           required: false
+        - name: numScenari
+          in: query
+          description: 'filtro scenari'
+          schema:
+            type: integer
+          required: false
       responses:
         '200':
           description: "Success"
