--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -32,6 +32,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
+              "src/favicon2.ico",
               "src/assets"
             ],
             "styles": [
